<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PaM-Controller</string>

    <!-- The text fields that are visible -->
    <string name="check_connection">Please make sure that both devices (this and the patien monitor) are in the same local network
        \nand press start.</string>
    <string name="check_connection_no_wifi">Your device is not connected to any Wifi network.</string>
    <string name="check_connection_ip1">You can now connect a monitoring device. \nMake sure it is connected to Wifi network: </string>
    <string name="check_connection_ip3">\nIf the button on the monitor is not green, you can try to connect manually to\nIP: </string>
    <string name="check_connection_ip2">The session name is: </string>
	<string name="timer">00:00</string>
    <string name="timer_init_text">00:00</string>
    
    <!-- dummy strings -->
    <string name="dummy_string_scenario_table">---</string>
    <string name="slash">/</string>
    
    <!-- The Button names -->
    <string name="start_button">Start</string>
    <string name="change_service_button">Change</string>
    <string name="reset_timer_button">Save</string>
    <string name="pause_timer_button">Pause</string>
    <string name="resume_timer_button">Resume</string>
    <string name="start_timer_button">Start</string>
    <string name="apply_button">Apply</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="popup_dismiss_button">Dismiss</string>
    <string name="defi_button">Defi Modus\n</string>
    <string name="flag_button">Flag</string>
    <string name="scenario_start_button">Add</string>
    <string name="scenario_stop_button">Save</string>
	<string name="delete_scenario_button">Delete</string>    
	<string name="changeToProtocollButton">Change scenario to protocol</string>
	<string name="changeToScenarioButton">Change protocol to scenario</string>
	<string name="stop_button">Stop the scenario</string>
	<string name="play_button">Start the scenario</string>
	<string name="pause_button">Pause the scenario</string>
	<string name="pause">Pause</string>
	<string name="play">Play</string>
	<string name="stop">Stop</string>
	<string name="heartPattern">The heartbeat pattern of the event</string>
	<string name="o2Pattern">The oxygen pattern of the event</string>
	<string name="co2Pattern">The CO2 pattern of the event</string>
	<string name="respPattern">The resp pattern of the event</string>
	<string name="bpPattern">The resp pattern of the event</string>
	<string name="cuff">Cuff attached</string>
	
	
    <!-- The Alert messages -->
    <string name="scenario_alert_title">Please give the Scenario a name.</string>
    <string name="scenario_alert_title_name_already_exists1">The name </string>
    <string name="scenario_alert_title_name_already_exists2"> already exists, try another one.</string>
    <string name="scenario_alert_message"></string>
    <string name="scenario_alert_positive_button2">Save</string>
    <string name="scenario_alert_positive_button">Save as Scenario</string>
    <string name="scenario_alert_neutral_button">Save as Protocoll</string>
    <string name="scenario_alert_negative_button">Cancel</string>
    <string name="connection_alert_button">Okay</string>
    <string name="connection_alert_title">Wifi not connected</string>
    <string name="connection_alert_text">In order to use this application, your device needs to be connected to a Wifi network</string>
    <string name="change_service_alert_positive_button">Change</string>
    <string name="change_service_alert_negative_button">Cancel</string>
    <string name="change_service_alert_title">Please give the Session a name.</string>
	
	<!-- image names and description -->
    <string name="ekgHeartDesc">Little heart-symbol which shows the pulses of the patients heart.</string>
    

    <!-- The Slider names -->
    <string name="scheduler_slider_text">Schedule:\t</string>
    <string name="scheduler_slider_value"> sec</string>
    <string name="heart_rate_slider_text">HR\n</string>
    <string name="heart_rate_slider_value"> bpm</string>
    <string name="o2_rate_slider_text">SPO2\n</string>
    <string name="o2_rate_slider_value"> %</string>
    <string name="co2_rate_slider_text">ETCO2\n</string>
    <string name="co2_rate_slider_value"> mmHg</string>
    <string name="raspiration_rate_slider_text">Raspiration\n</string>
    <string name="raspiration_rate_slider_value"> bpm</string>
    <string name="blood_pressure_systolic_slider_text">BP S/D\n</string>
    <string name="blood_pressure_slider_value">\nmmHg</string>
    <string name="blood_pressure_table_entry">RR: </string>
    <string name="blood_pressure_table_value"> mmHg</string>
    <string name="o2_rate_table_entry">SPO2: </string>
    <string name="co2_rate_table_entry">ETC02: </string>
    <string name="blood_pressure_table_entry2">NIBP: </string>
    <string name="time_table_entry"> s</string>
    <string name="colon"> : </string>
    <string name="createScenario">Create Scenario</string>
    <string name="flag">Flag set at time :</string>
    <string name="respText">Resp.: "</string>
    <string name="respValue">10</string>
    <string name="respUnit">bpm</string>
    
    <!-- Check Boxes -->
    <string name="cuff_checkBox">Cuff</string>
    <string name="ekg_checkBox">EKG</string>
    
    <!-- The ActionBar items names -->
    <string name="action_settings">Settings</string>
    <string name="action_scenario">Scenarios</string>
    <string name="action_protocoll">Protocoll</string>

    <!-- The PopUp strings -->
    <string name="curve_choose_string">Choose curve:</string>

    
    <!-- Textviews of boxes (headlines) -->
    <string name="protocoll_box_text">Protocoll:</string>
    <string name="scenario_box_text">Scenario:</string>
    <string name="attachments_box_text">Attachments:</string>
    
    <!-- Useless text views for now -->
    <string name="scenario">You can do something here pretty soon ;)</string>
    <string name="settings">You can change the settings here pretty soon ;)</string>
    <string name="title_activity_preference">Back</string>
    <string name="title_activity_controller">Back</string>
    <string name="title_activity_scenario">Back</string>
    <string name="title_activity_protocoll">Back</string>

</resources>
